--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -30,7 +30,7 @@
     "title": "Dalle Image Generator",
     "description": "This is a DALL·E-powered image generator web app. Enter a prompt to generate AI images, view your creations in the gallery, and download them for your use. Technologies Used are Python 3, Flask (web framework), OpenAI API (DALL·E 3), HTML, CSS, JavaScript (frontend). This app allows users to generate images using the DALL·E 3 model by OpenAI. Generated images are saved and can be viewed in the gallery. Users can download any image they create. The app is built with Flask for the backend and uses modern HTML/CSS/JS for the frontend.",
     "image": "https://raw.githubusercontent.com/Muhammad-Ahtasham/Dalle-Image-Generator/refs/heads/main/Generated%20Images/5aa80183beab4679b7f3494f376d5eea.png",
-    "demo": "https://youtu.be/-TbBT0_zs6Q?si=F_oCtxe13UV4btS_",
+    "demo": "https://dalle-image-generator-kxb2.onrender.com/",
     "video": "https://youtu.be/-TbBT0_zs6Q?si=F_oCtxe13UV4btS_",
     "github": "https://github.com/Muhammad-Ahtasham/Dalle-Image-Generator"
   },
