--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,5 +1,13 @@
 [
   {
+    "title": "AI Resume Reviewer",
+    "description": "Developed a full-stack AI-powered application that allows users to upload PDFs and interact with their content through natural language queries. Leveraging Large Language Models (LLMs) and Weaviate vector database, the system performs semantic search and context-based question answering over PDF documents. The key technologies used are MERN Stack (MongoDB, Express, React, Node.js) for the web interface and backend, Weaviate for vectorized document storage and semantic search, LangChain / OpenAI API (or relevant LLMs) for understanding and answering questions, PDF parsing and preprocessing for chunking and embedding generation. The Example use cases are Legal document Q&A, Research paper summarization, Internal knowledge base access. This project showcases my ability to integrate machine learning with scalable web technologies to build real-world AI solutions.",
+    "image": "https://media.licdn.com/dms/image/v2/D5612AQHiyWWGuGLhFg/article-cover_image-shrink_720_1280/article-cover_image-shrink_720_1280/0/1733814700081?e=2147483647&v=beta&t=NQeMb2OoFxWjRCRgp8JYA8wc_06g_rYr7YDvV9zORIY",
+    "github": "https://github.com/ahtasham-ahsan/AI-Resume-Reviewer.git",
+    "demo": "https://ai-resume-reviewer-1.netlify.app/",
+    "video": "https://youtu.be/DwMdzo3OT6M"
+  },
+  {
     "title": "PDFQuery AI",
     "description": "Developed a full-stack AI-powered application that allows users to upload PDFs and interact with their content through natural language queries. Leveraging Large Language Models (LLMs) and Weaviate vector database, the system performs semantic search and context-based question answering over PDF documents. The key technologies used are MERN Stack (MongoDB, Express, React, Node.js) for the web interface and backend, Weaviate for vectorized document storage and semantic search, LangChain / OpenAI API (or relevant LLMs) for understanding and answering questions, PDF parsing and preprocessing for chunking and embedding generation. The Example use cases are Legal document Q&A, Research paper summarization, Internal knowledge base access. This project showcases my ability to integrate machine learning with scalable web technologies to build real-world AI solutions.",
     "image": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQS1zjvdWgyWKNb3UObU6o5awocQhr6frdOJQ&s",
