--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -18,7 +18,7 @@
   {
     "title": "AI Image Generation",
     "description": "Using a pretrained model from hugging face, I trained it on my custom dataset (my own images). So the model used to take prompts and generate images based on the prompt",
-    "image": "https://media.licdn.com/dms/image/v2/D4D22AQHEgnOtXGpnqw/feedshare-shrink_800/feedshare-shrink_800/0/1690180464170?e=1755734400&v=beta&t=sd2zRk2QMXkGVcdXdBubF-9MpX4wdIBp_YmpeSDnjDo",
+    "image": "/images/project-ai-image-generation.jpg",
     "demo": "https://www.linkedin.com/posts/muhammadahtasham_artificialintelligence-lora-aienthusiast-activity-7089130698317438976-_EaG"
   },
   {
@@ -31,7 +31,7 @@
   {
     "title": "AI Based Alzheimer's Detection And Classification",
     "description": "Developed an innovative AI-powered system for early detection and classification of Alzheimer's disease. Leveraged machine learning algorithms and advanced neural networks to analyze brain imaging data, identifying subtle patterns indicative of the disease's onset. This project aimed to provide a non-invasive and efficient method for early diagnosis, potentially leading to better patient outcomes and enhanced treatment strategies. Collaborated with medical professionals to ensure clinical relevance and accuracy.",
-    "image": "https://media.licdn.com/dms/image/v2/D4D22AQHD0zJFgLnESw/feedshare-shrink_1280/feedshare-shrink_1280/0/1715541193239?e=1755734400&v=beta&t=rszBH-cimg2XMEHv7xlbbabZ1q6WJVX2--5SK12OicA",
+    "image": "/images/project-alzheimers-detection.png",
     "demo": "https://www.linkedin.com/posts/muhammadahtasham_fyp-alzheimersdetection-teamwork-activity-7195501294457962496-Wwc6?utm_source=share&utm_medium=member_desktop&rcm=ACoAADbgXp4BG7KxPlptFGtM1RcbIFvbevtkFK4"
   },
   {
