--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,5 +1,11 @@
 [
   {
+    "title": "Zyraa – Project Management & Team Collaboration Platform",
+    "description": "Zyraa is a full-stack SaaS project management and team collaboration platform designed to streamline workflows, track progress, and automate team communication. It enables teams to manage sprint-based tasks with priority assignment, customizable workflows, drag-and-drop status tracking, integrated time monitoring, and secure document management. The platform features Slack integration for automated standups and channel synchronization, Stripe-powered subscription handling, AWS S3 file storage, and role-based access control with JWT authentication. Built with Node.js, Express, TypeScript, MongoDB, and React 18 (Vite + Tailwind CSS), Zyraa demonstrates expertise in scalable backend architecture, RESTful API development, cloud integration, SaaS billing systems, and modern interactive frontend design using Zustand, React DnD, and Tiptap.",
+    "image": "/images/zyraa.png",
+    "demo": "https://zyraa.net/"
+  },
+  {
     "title": "AI Resume Reviewer",
     "description": "AI Resume Reviewer is a full-stack web application that leverages advanced AI to analyze PDF resumes and provide actionable feedback. Users can upload their resumes, which are then processed using OpenAI’s GPT-4 to extract key sections like Skills, Experience, and Education. The app highlights potential gaps, suggests improvements, and compares extracted skills with industry recommendations. With a modern, responsive interface built on Next.js and Tailwind CSS, it delivers a seamless user experience. The backend, powered by Express.js and LangChain, orchestrates the AI workflow for accurate and insightful analysis. This tool empowers job seekers to optimize their resumes and boost their chances in the job market.",
     "image": "https://media.licdn.com/dms/image/v2/D5612AQHiyWWGuGLhFg/article-cover_image-shrink_720_1280/article-cover_image-shrink_720_1280/0/1733814700081?e=2147483647&v=beta&t=NQeMb2OoFxWjRCRgp8JYA8wc_06g_rYr7YDvV9zORIY",
